<resources>
    <string name="app_name">Travel-taneous</string>
    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="london2020">London2020</string>
    <string name="create_trip">Create Trip</string>
    <string name="add_trip_name">add trip name</string>
    <string name="new_trip">new trip</string>
    <string name="estimate">Estimate</string>
    <string name="actual">Actual</string>
    <string name="trip_overview">Trip Overview</string>
    <string name="create_new_trip">Create new trip</string>
    <string name="dashboard">dashboard</string>
    <string name="input_dollar_amount">input dollar amount</string>
    <string name="lodging">Lodging</string>
    <string name="transportation">Transportation</string>
    <string name="meals">Meals</string>
    <string name="entertainment">Entertainment</string>
    <string name="unplanned">Unplanned</string>
    <string name="paychecks_to_save">Paychecks to Save</string>
    <string name="num">#</string>
    <string name="how_much_to_save_per_paycheck">How much to save per paycheck</string>
    <string name="textview">TextView</string>
    <string name="add_dollars">add dollars</string>
    <string name="esthint">enter</string>
    <string name="back"><![CDATA[<- dashboard]]></string>
    <string name="cost"><![CDATA[actual cost ->]]></string>
    <string name="costback"><![CDATA[<- Actual Cost]]></string>
    <string name="dashfor"><![CDATA[dashboard ->]]></string>
    <string name="calc">calculate/update</string>
    <string name="save">save</string>
    <string name="estback"><![CDATA[<- estimate]]></string>
    <string name="tripfor"><![CDATA[trip overview ->]]></string>
    <string name="pay"># of paychecks</string>
    <string name="money">$</string>
    <string name="all">Overall</string>
    <string name="none">-</string>
    <string name="tot">Total</string>
</resources>
