<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <TextView
            android:id="@+id/estimateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/estimate"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/actualBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/actual"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/overviewBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trip_overview"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</RelativeLayout>